fixed date 22 Oct

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 				<!-- ################################################################################################################################### -->
 				<footer class="marco">
 						<div class="threefooterleft"><font style="position:fixed; bottom:2px; left:80px">Institute for Risk and Uncertainty</font></div>
-						<div class="threefootercentre"><font id="oggi" style="position:fixed; bottom:2px; left:440px"></font> </div>
+						<!--<div class="threefootercentre"><font id="oggi" style="position:fixed; bottom:2px; left:440px"></font> </div>-->
+						<div class="threefootercentre"><font style="position:fixed; bottom:2px; left:440px"> 22 Oct 2018 </font> </div>
 						<div class="threefooterright"><font style="position:fixed; bottom:2px; right:100px">University of Liverpool</font></div>
 				</footer>
 				<!-- ################################################################################################################################### -->
