changed link to presentation

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<br>
 						<font style="font-size:16px">Created by <a href="https://www.liverpool.ac.uk/risk-and-uncertainty/staff/marcodeangelis/">Marco De Angelis</a></font>
 					</p>
-					<p style="font-size:20px"> <a href="https://riskinstitute.uk/balliol"> https://riskinstitute.uk/balliol </a></p>
+					<p style="font-size:20px"> <a href="https://riskinstitute.uk/marco/oxford"> https://riskinstitute.uk/balliol </a></p>
 				</section>
 
 				<!--<a href="http://riskinstitute.uk"><img class="logoUoL_s" src="pics/logos/UoL_Color.svg" alt="UoL logo"></a>
