--- a/index.html
+++ b/index.html
@@ -289,13 +289,12 @@
 				<h2>Uncertainty</h2>
 				<ul>
 					<li> Artifactual uncertainty
-					<li> Variability arises from
 						<ul style="color:green; font-size:30px">
 							<li> too few polynomial terms
 							<li> numerical instability
 							<li> can be reduced by a better analysis
 						</ul>
-					<li> Artifactual uncertainty
+					<li> Authentic uncertainty
 						<ul style="color:green; font-size:30px">
 							<li> genuine unpredictability due to input uncertainty
 							<li> cannot be reduced by a better analysis
@@ -312,10 +311,10 @@
 					<li style="margin: 35px;"> We <i>want</i> the prediction to 'break down' if that's what should happen
 					<li style="margin: 35px;"> But we don't want artifactual uncertainty
 						<ul style="color:green">
-							<li> Numerical instabilities
-							<li> Wrapping effect
-							<li> Dependence problem
 							<li> Repeated parameters
+							<li> Wrapping effect (or topology deception)
+							<li> Dependence problem
+							<li> Numerical instabilities
 						</ul>
 				</ul>
 				</section>
