--- a/urbasis/index.html
+++ b/urbasis/index.html
@@ -114,6 +114,194 @@
 					<p style="font-size:20px; position:absolute; left:0px; bottom:-100px"> <a href="https://riskinstitute.uk/researchprojects/urbasis/"> https://riskinstitute.uk/researchprojects/urbasis/ </a></p>
 				</section>
 
+				<section>
+					<ul>
+						<li> PhD advert already online </li>
+						<br>
+						<li> Liverpool Institute for Risk and Uncertainty, Training + Software </li>
+						<br>
+						<li> About the WP </li>
+					</ul>
+
+				</section>
+
+				<section>
+					<h3>Data acquisition</h3>
+					<div style="font-size: 28px; width:40%; float:left">
+						<br>
+						<ul>
+							<li> Stream data in real time </li>
+							<br>
+							<li> In-built sensorsGetAccuracy(self) </li>
+							<br>
+							<li> Read geolocation of device </li>
+							<br>
+							<li> Secure transfer protocol </li>
+						</ul>
+					</div>
+					<div style="font-size: 24px; width:60%; float:right">
+							<pre><code class="python" style="background: #191970" data-trim contenteditable>
+								#-*-coding:utf8;-*-
+								#qpy:3
+								#qpy:console
+
+								print("This code records accelerations from your android")
+
+								import android 
+								import time 
+								#import matplotlib.pyplot as plt
+
+								droid = android.Android() 
+								dt = 100 #100ms between sensings 
+								endTime = 10000 #sample for 3000ms 
+
+								timeSensed=0 
+								droid.startSensingTimed(2,dt) 
+								while timeSensed <= endTime: 
+								    #print(droid.sensorsReadAccelerometer().result) 
+								    x=droid.sensorsReadAccelerometer().result[0]
+								    y=droid.sensorsReadAccelerometer().result[1]
+								    z=droid.sensorsReadAccelerometer().result[2]
+								    print(z)
+								    time.sleep(dt/1000.0) 
+								    timeSensed+=dt
+								    
+								droid.stopSensing()
+
+							</code></pre>
+						</div>	
+				</section>
+
+				<section>				
+						<div style="font-size: 16px">
+							<pre><code class="python" style="background: #191970" data-trim contenteditable>
+								import csv
+								with open('data.csv') as csvfile:
+								    reader = csv.reader(csvfile, delimiter=',')
+								    z = []
+								    for row in reader:
+								        z.append(float(row[0]))
+        
+								import matplotlib.pyplot as plt
+								plt.figure(figsize=(12,6))
+								plt.title("Vertical acceleration")
+								plt.xlabel("time steps")
+								plt.ylabel("z[m/s2]")
+								plt.plot(z)
+								plt.show()
+							</code></pre>
+						</div>	
+					<div style="width: 100%; overflow: hidden;">
+					<div style="width:85%; float: left;">
+						<iframe src="https://trinket.io/embed/python3/51b87c9fd3" width="100%" height="400" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+					</div>
+					<div style="width:15%; font-size: 10px; float: right;">
+						<pre><code class="python" style="background: #191970" data-trim contenteditable>
+								6.8278656
+								7.0475159999999999
+								6.686096
+								6.4494476000000001
+								6.5010529999999997
+								6.7910919999999999
+								6.8520510000000003
+								6.8699493
+								7.4901122999999998
+								7.3333130000000004
+								6.8527829999999996
+								6.6544189999999999
+								6.3092345999999999
+								6.1778409999999999
+								6.1332396999999998
+								4.8860780000000004
+								16.122237999999999
+								7.2493439999999998
+								2.2017821999999998
+								-5.9061279999999998
+								1.0516509999999999
+								4.259735
+								-7.1590423999999997
+								5.7651978000000002
+								13.177047999999999
+								7.2752840000000001
+								6.5751650000000001
+								8.1139679999999998
+								10.155272999999999
+								4.7158965999999998
+								8.5197599999999998
+								3.1900482000000001
+								10.787872
+								5.6940920000000004
+								2.0254821999999999
+								4.9109496999999998
+								2.3337707999999999
+								6.0192566000000003
+								11.393616
+								15.487213000000001
+								11.306305
+								5.3553009999999999
+								9.7752075000000005
+								9.8904110000000003
+								11.22644
+								6.7145232999999998
+								7.365799
+								6.9216156
+								6.3589169999999999
+								6.3173522999999996
+								6.6725919999999999
+								7.3934480000000002
+								6.4988099999999998
+								6.8426055999999997
+								7.3701780000000001
+								7.6192627000000002
+								7.5938569999999999
+								6.9359435999999999
+								7.3183594000000003
+								9.5214230000000004
+								8.0496669999999995
+								7.5037839999999996
+								6.6532745000000002
+								4.2282867
+								8.4560999999999993
+								9.8515320000000006
+								8.6029210000000003
+								6.6306304999999996
+								5.5654450000000004
+								4.376709
+								26.144745
+								0.68516540000000004
+								5.9163819999999996
+								5.9722594999999998
+								-0.11067200000000001
+								1.8184509
+								2.3247985999999998
+								19.617691000000001
+								21.517105000000001
+								6.8494109999999999
+								5.1018524000000003
+								3.9626923000000001
+								4.7449493
+								5.7466429999999997
+								5.7646790000000001
+								6.0793914999999998
+								5.7736815999999997
+								10.656082
+								5.1253814999999996
+								4.9213867000000002
+								4.8287199999999997
+								4.9548186999999997
+								8.9699709999999993
+								10.758438
+								6.7756499999999997
+								6.0845184000000003
+								6.2740020000000003
+								6.1630095999999996
+								6.8003080000000002
+								11.243392999999999
+
+							</code></pre>
+					</div>
+				</div>
+				</section>
 
 
 				<!-- #########################################################  END  ################################################################### -->
