--- a/urbasis/index.html
+++ b/urbasis/index.html
@@ -116,13 +116,17 @@
 
 				<section>
 					<ul>
-						<li> PhD advert already online </li>
+						<li> About the WP </li>
 						<br>
 						<li> Liverpool Institute for Risk and Uncertainty, Training + Software </li>
 						<br>
-						<li> About the WP </li>
+						<li> PhD advert already online </li>
 					</ul>
 
+				</section>
+
+				<section>
+					
 				</section>
 
 				<section>
@@ -303,6 +307,13 @@
 				</div>
 				</section>
 
+				<section>
+					html snippet of the liverpool webpage
+				</section>
+
+				<section>
+					On slide that summarises the Institute
+				</section>
 
 				<!-- #########################################################  END  ################################################################### -->
 				<section>
