--- a/urbasis/index.html
+++ b/urbasis/index.html
@@ -118,18 +118,108 @@
 					<ul>
 						<li> About the WP </li>
 						<br>
-						<li> Liverpool Institute for Risk and Uncertainty, Training + Software </li>
+						<li> PhD advert online </li>
 						<br>
-						<li> PhD advert already online </li>
+						<li> Liverpool Institute for Risk and Uncertainty <font style="font-size: 14px; color: grey"> Training + Software</font> </li>
+						
 					</ul>
 
 				</section>
 
 				<section>
-					
+					<h4> Objectives</h4>
+					<ul style="font-size: 32px">
+						<li style="margin: 25px"> To investigate the effect of epistemic uncertainty for earthquake characterisation</li>
+						<li style="margin: 25px"> To develop models and tools for engineering applications based on site measurements</li>
+						<li style="margin: 25px"> To analyse recordings of large earthqukes in near-fields </li>
+						<li style="margin: 25px"> To develop robust methods for host-to-target conversions of <i>Ground-motion prediction equations</i> based on stochastic modelling</li>
+					</ul>
+				</section>
+
+				<section data-background="pics/seismometer2.jpg">
+					<h3>Seismographs</h3>
+					<div style="width:45%; float:left; font-size: 28px">
+					<ul>
+						<li> Chang seismoscope 132 BC </li>
+						<br>
+						<li> Analogical  </li>
+						<ul style="color: green">
+							<li>Mechanical</li>
+							<li>Optical <font style="color: yellow">Richter 1930</font></li>
+							<li>Electromagnetic</li>
+						</ul>
+						<br>
+						<li> Digital </li>
+					</ul>
+					<br><br>
+					<p style="color: grey">Filippo Cecchi 1875, pendolum</p>
+					</div>
+
+					<div style="width:45%; float:right" >
+						<br>
+						<img src="pics/analog_mech.svg" alt="mech">
+						<br>
+						\[ m\ddot{u} + c\dot{u} + ku = -m\ddot{u}_g \]
+						\[ \ddot{u} + 2 \xi \omega_0 \dot{u} + \omega_0^2 u = -\ddot{u}_g \]
+					</div>
+
 				</section>
 
 				<section>
+					<h3>World-wide standard seismograph network, WWSSN</h3>
+					<ul>
+						<li> Established 1961 <font style="color: yellow"> atomic test ban</font> </li>
+						<li> 150 modern seismic stations </li>
+						<li> Global interconnected network</li>
+					</ul>
+					<br><br>
+					<a href="https://ds.iris.edu/seismon/" data-preview-link>IRIS WEB</a>
+				</section>
+
+				<section>
+					<h3> International agencies seismic networks </h3>
+					<ul style="font-size: 32px">
+						<li><a href="https://www.iris.edu/hq/"><strong>IRIS</strong></a>: Incorporated research institution for seismology</li>
+						<li><a href="https://www.usgs.gov"><strong>USGS</strong></a>: U.S. geological survey</li>
+						<li><a href="https://isc.ac.uk"><strong>ISC</strong></a>: International seismological centre</li>
+						<li><a href="https://earthquake.usgs.gov/"><strong>NEIC</strong></a>: National earthquake information centre</li>
+						<li><a href="https://www.orfeus-eu.org/"><strong>ORFEUS</strong></a>: Observatories (...) for european seismology</li>
+						<li><a href="https://www.emsc-csem.org/#2"><strong>EMSC</strong></a>: European mediterranean seismological centre</li>
+					</ul>
+				</section>
+
+				<section>
+					<div style="width:45%; float:left">
+					<h4>Epistemic uncertainty</h2>
+					<ul style="font-size: 28px">
+						<li> Arises from incomplete knowledge
+						<li> <strong>Incertitude</strong> arises from
+							<ul style="color:green">
+								<li> limited sample size
+								<li> measurement error
+								<li> surragate data
+							</ul>
+						<li> Reducible by empirical effort
+						<li> <font style="color: blue">Ex.: Attenuation model, seismic source, magnitude</font>
+					</ul>
+					</div>
+					<div style="width:45%; float:right">
+					<h4>Aleatory uncertainty</h2>
+					<ul style="font-size: 28px">
+						<li> Arises from natural stochasticity
+						<li> Variability arises from
+							<ul style="color:green">
+								<li> spatial variation
+								<li> temporal fluctuations
+								<li> manufactoring/material differences
+							</ul>
+						<li> Not reducible by empirical effort
+						<li> <font style="color: blue">Ex.: Two identical accelerograms</font>
+					</ul>
+					</div>
+				</section>
+
+				<section data-background="pics/raspberryshake_shade.jpg">
 					<h3>Data acquisition</h3>
 					<div style="font-size: 28px; width:40%; float:left">
 						<br>
@@ -177,7 +267,12 @@
 				</section>
 
 				<section>				
-						<div style="font-size: 16px">
+
+						<div style="float:left; width: 50%">
+							<br>
+							<h3>A demo</h3>	
+						</div>
+						<div style="font-size: 16px; width:40%; float:right; position: relative;right:150px">
 							<pre><code class="python" style="background: #191970" data-trim contenteditable>
 								import csv
 								with open('data.csv') as csvfile:
@@ -308,13 +403,14 @@
 				</section>
 
 				<section>
-					html snippet of the liverpool webpage
+					<a href="https://www.liverpool.ac.uk/risk-and-uncertainty-cdt/studentships/"> <img src="pics/projectAdvert.png"></img> </a>
 				</section>
 
 				<section>
-					On slide that summarises the Institute
+					<h3>Institute for Risk and Uncertainty</h3>
+					<iframe width="560" height="315"  data-src="https://www.youtube.com/embed/LC20GVbbaNg?autoplay=1"></iframe>
 				</section>
-
+				<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/LC20GVbbaNg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 				<!-- #########################################################  END  ################################################################### -->
 				<section>
 					<h1> END </h1>
