--- a/urbasis/index.html
+++ b/urbasis/index.html
@@ -270,7 +270,7 @@
 
 						<div style="float:left; width: 50%">
 							<br>
-							<h3>A demo</h3>	
+							<h3>Demo</h3>	
 						</div>
 						<div style="font-size: 16px; width:40%; float:right; position: relative;right:150px">
 							<pre><code class="python" style="background: #191970" data-trim contenteditable>
@@ -430,7 +430,7 @@
 					<section>
 					<h3>Load characterisation with <br> vague and sparse information</h3>
 
-					<h4><a href="https://www.liverpool.ac.uk/engineering/staff/michael-beer/">Michael Beer</a></h4>
+					<h4><a href="https://www.liverpool.ac.uk/engineering/staff/michael-beer/">Michael Beer</a>, <a href="https://www.liverpool.ac.uk/engineering/staff/edoardo-patelli/">Edoardo Patelli</a></h4>
 
 					<!--<p style="font-size:20px"> <a href="https://marcodeangelis.github.io/"> https://marcodeangelis.github.io/ </a></p>-->
 					<p style="font-size:20px; position:absolute; left:0px; bottom:-75px"> <a href="https://urbasis-eu.osug.fr/"> https://urbasis-eu.osug.fr/ </a></p>
