--- a/urbasis/index.html
+++ b/urbasis/index.html
@@ -403,6 +403,85 @@
 				</section>
 
 				<section>
+					<div  style="width: 50%;float: left">
+					<table style="font-size: 32px;">
+						<thead>
+							<tr>
+								<th>Hedged numerical <br>  expression</th>
+								<th>Interpretation</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>\[ \text{mathematical}\ x \]</td>
+								<td>\[ x \]</td>
+							</tr>
+							<tr>
+								<td>\[ \text{exaclty}\ x \]</td>
+								<td>\[ x \pm 10^{-(d+1)} \]</td>
+							</tr>
+							<tr>
+								<td>\[ \text{x} \]</td>
+								<td>\[ x \pm 0.5 \times 10^{-d} \]</td>
+							</tr>
+							<tr>
+								<td>\[ \text{about}\ x \]</td>
+								<td>\[ x \pm 2 \times 10^{-d} \]</td>
+							</tr>
+							<tr>
+								<td>\[ \text{around}\ x \]</td>
+								<td>\[ x \pm 10 \times 10^{-d} \]</td>
+							</tr>
+							<tr>
+								<td>\[ \text{count}\ x \]</td>
+								<td>\[ x \pm \sqrt{x} \]</td>
+							</tr>
+							<tr>
+								<td>\[ \text{between}\ x\ \text{and}\ y \]</td>
+								<td>\[ \left[x, y \right] \]</td>
+							</tr>
+						</tbody>
+					</table>
+					<p style="font-size: 12px;text-align: left">Ferson, S., O'Rawe, J., Antonenko, A., Siegrist, J., Mickley, J., Luhmann, C.C., Sentz, K. and Finkel, A.M., 2015. Natural language of uncertainty: numeric hedge words. <i>International Journal of Approximate Reasoning</i>, 57, pp.19-39.</p>
+					</div>
+					<div style="width:20%; font-size: 28px; float: right; position: relative; right: 100px">
+						<br>
+						<br>
+						<pre><code class="python" style="background: #191970" data-trim contenteditable>
+								[[-0.190,-0.188],
+								[-0.250,-0.249],
+								[-0.273,-0.272],
+								[-0.270,-0.269],
+								[-0.209,-0.208],
+								[-0.262,-0.262],
+								[-0.208,-0.206],
+								[1.795,1.796],
+								[-2.472,-2.470],
+								[-0.751,-0.749],
+								[-0.263,-0.262],
+								[-0.831,-0.830],
+								[-0.069,-0.068],
+								[-0.595,-0.594],
+								[0.224,0.225],
+								[1.616,1.617],
+								[1.055,1.056],
+								[-1.856,-1.855],
+								[-0.621,-0.620],
+								[1.294,1.295],
+								[-0.300,-0.298],
+								[0.267,0.269],
+								[-2.038,-2.037],
+								[0.175,0.176],
+								[-1.866,-1.860],
+								[2.316,2.317],
+								[0.521,0.522],
+								[3.438,3.439],
+								[-0.505,-0.504]]
+							</code></pre>
+					</div>
+				</section>
+
+				<section>
 					<a href="https://www.liverpool.ac.uk/risk-and-uncertainty-cdt/studentships/"> <img src="pics/projectAdvert.png"></img> </a>
 				</section>
 
@@ -412,9 +491,9 @@
 				</section>
 				<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/LC20GVbbaNg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 				<!-- #########################################################  END  ################################################################### -->
-				<section>
+				<!--<section>
 					<h1> END </h1>
-				</section>
+				</section>-->
 				<!-- ################################################################################################################################### -->
 			</section>
 				<!--<a href="http://riskinstitute.uk"><img class="logoUoL_s" src="pics/logos/UoL_Color.svg" alt="UoL logo"></a>
