--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             <li> <a href="oxford/index.html">Oxford slides</a> presented 22 October 2018</li>
         </ul>-->
 
+        <h1><a href="digitwin/index.html">DigiTwin: RAs meeting</a></h1>
+		<h4>4 December 2018</h4>
+
+		<br>
+
 		<h1><a href="urbasis/index.html">Urbasis: kick-off</a></h1>
 		<h4>15 November 2018</h4>
 
