--- a/digitwin/index.html
+++ b/digitwin/index.html
@@ -135,7 +135,7 @@
 							<ul style="color:green">
 								<li> limited sample size
 								<li> measurement error
-								<li> use of surragate data
+								<li> use of surrogate data
 							</ul>
 							<li> Reducible with empirical effort
 					</ul>
@@ -149,7 +149,7 @@
 							<ul style="color:green">
 								<li> spatial variation
 								<li> temporal fluctuations
-								<li> manufactoring/material differences
+								<li> manufacturing/material differences
 							</ul>
 							<li> Not reducible by empirical effort
 					</ul>
@@ -571,7 +571,7 @@
 
 						</ul>
 					</section>
-					
+
 					<section>
 					<h3>Strategy</h3>
 						<ul>
@@ -685,7 +685,7 @@
 									<li>	Low discrepancy sampling
 									<li>	Importance sampling
 								</ul>
-							<li style="margin: 25px;"> Dependency among Pboxes can be included
+							<li style="margin: 25px;"> Dependency among p-boxes can be included
 						</ul>
 				</section>
 
