--- a/urbasis/index.html
+++ b/urbasis/index.html
@@ -37,8 +37,8 @@
 				<!-- ################################################################################################################################### -->
 				<footer class="marco">
 						<div class="threefooterleft"><font style="position:fixed; bottom:2px; left:80px">Institute for Risk and Uncertainty</font></div>
-						<div class="threefootercentre"><font id="oggi" style="position:fixed; bottom:2px; left:440px"></font> </div>
-						<!--<div class="threefootercentre"><font style="position:fixed; bottom:2px; left:440px"> 15 Nov 2018 </font> </div>-->
+						<!--<div class="threefootercentre"><font id="oggi" style="position:fixed; bottom:2px; left:440px"></font> </div>-->
+						<div class="threefootercentre"><font style="position:fixed; bottom:2px; left:440px"> 15 Nov 2018 </font> </div>
 						<div class="threefooterright"><font style="position:fixed; bottom:2px; right:100px">University of Liverpool</font></div>
 				</footer>
 				<!-- ################################################################################################################################### -->
@@ -116,7 +116,7 @@
 
 				<section>
 					<ul>
-						<li> About the WP </li>
+						<li> About the RP </li>
 						<br>
 						<li> PhD advert online </li>
 						<br>
@@ -131,7 +131,7 @@
 					<ul style="font-size: 32px">
 						<li style="margin: 25px"> To investigate the effect of epistemic uncertainty for earthquake characterisation</li>
 						<li style="margin: 25px"> To develop models and tools for engineering applications based on site measurements</li>
-						<li style="margin: 25px"> To analyse recordings of large earthqukes in near-fields </li>
+						<li style="margin: 25px"> To analyze recordings of large earthqukes in near-fields </li>
 						<li style="margin: 25px"> To develop robust methods for host-to-target conversions of <i>Ground-motion prediction equations</i> based on stochastic modelling</li>
 					</ul>
 				</section>
@@ -183,8 +183,8 @@
 						<li><a href="https://www.usgs.gov"><strong>USGS</strong></a>: U.S. geological survey</li>
 						<li><a href="https://isc.ac.uk"><strong>ISC</strong></a>: International seismological centre</li>
 						<li><a href="https://earthquake.usgs.gov/"><strong>NEIC</strong></a>: National earthquake information centre</li>
-						<li><a href="https://www.orfeus-eu.org/"><strong>ORFEUS</strong></a>: Observatories (...) for european seismology</li>
-						<li><a href="https://www.emsc-csem.org/#2"><strong>EMSC</strong></a>: European mediterranean seismological centre</li>
+						<li><a href="https://www.orfeus-eu.org/"><strong>ORFEUS</strong></a>: Observatories (...) for European seismology</li>
+						<li><a href="https://www.emsc-csem.org/#2"><strong>EMSC</strong></a>: European Mediterranean seismological centre</li>
 					</ul>
 				</section>
 
@@ -197,7 +197,7 @@
 							<ul style="color:green">
 								<li> limited sample size
 								<li> measurement error
-								<li> surragate data
+								<li> surrogate data
 							</ul>
 						<li> Reducible by empirical effort
 						<li> <font style="color: blue">Ex.: Attenuation model, seismic source, magnitude</font>
@@ -211,7 +211,7 @@
 							<ul style="color:green">
 								<li> spatial variation
 								<li> temporal fluctuations
-								<li> manufactoring/material differences
+								<li> manufacturing/material differences
 							</ul>
 						<li> Not reducible by empirical effort
 						<li> <font style="color: blue">Ex.: Two identical accelerograms</font>
@@ -246,7 +246,7 @@
 								#import matplotlib.pyplot as plt
 
 								droid = android.Android() 
-								dt = 100 #100ms between sensings 
+								dt = 100 #100ms between sensing 
 								endTime = 10000 #sample for 3000ms 
 
 								timeSensed=0 
@@ -417,7 +417,7 @@
 								<td>\[ x \]</td>
 							</tr>
 							<tr>
-								<td>\[ \text{exaclty}\ x \]</td>
+								<td>\[ \text{exactly}\ x \]</td>
 								<td>\[ x \pm 10^{-(d+1)} \]</td>
 							</tr>
 							<tr>
@@ -506,8 +506,9 @@
 				<!-- #######################################################   FRONT SLIDE  ############################################################ -->
 				<!-- ################################################################################################################################### -->
 				<section>
+
 					<section>
-					<h3>Load characterisation with <br> vague and sparse information</h3>
+					<h3>ESR 4.4 Load characterisation with <br> vague and sparse information</h3>
 
 					<h4><a href="https://www.liverpool.ac.uk/engineering/staff/michael-beer/">Michael Beer</a>, <a href="https://www.liverpool.ac.uk/engineering/staff/edoardo-patelli/">Edoardo Patelli</a></h4>
 
@@ -516,10 +517,11 @@
 					<p style="font-size:20px; position:absolute; left:0px; bottom:-100px"> <a href="https://riskinstitute.uk/researchprojects/urbasis/"> https://riskinstitute.uk/researchprojects/urbasis/ </a></p>
 				</section>
 
+
+
+
 				<!-- #####################################################                  ############################################################ -->
-				<section>
-					<img src="pics/liam/slide_1.svg" alt="slide_1">
-				</section>
+
 
 				<!-- #####################################################                  ############################################################ -->
 				<section>
@@ -535,6 +537,27 @@
 				<section>
 					<img src="pics/liam/slide_4.svg" alt="slide_4">
 				</section>
+
+								<section>
+					<img src="pics/liam/slide_1.svg" alt="slide_1">
+				</section>
+
+								<section data-markdown>
+						<textarea data-template>
+						
+						#### Objectives
+
+						* Deal with non-evenly sampled data, gaps, dependencies and sparse data
+						* Build robust reconstruction process based on machine learning
+						* Efficient simulation approach to deal with epistemic and aleatory uncertainty
+
+						#### Secondment
+
+						* 6 months UGA, Philippe
+						* 3 months GEOTER, David Baumont
+
+						</textarea>
+					</section>
 
 					<!-- #########################################################  END  ################################################################### -->
 					<section>
@@ -566,6 +589,8 @@
 					</blockquote> <font style="font-size: 26px;">Robert Costanza</font>
 				</div>
 				</section>
+
+
 				<!-- ################################################################################################################################### -->
 
 					</div> <!--End of slides-->
