demo now in the presentation

--- a/digitwin/index.html
+++ b/digitwin/index.html
@@ -552,11 +552,11 @@
 						</ul>
 					</section>
 				
-				<section>
-					<h3>
-						intricate diagram
-					</h3>
-				</section>
+					<section>
+						<video data-autoplay>
+	    					<source data-src="pics/video/demo.mp4" type="video/mp4" />
+  						</video>
+					</section>
 
 				<section>
 					<img src="pics/gui.png" alt="gui">
@@ -573,7 +573,7 @@
 					</section>
 
 					<section>
-					<h3>Strategy</h3>
+					<h3>Strategy for template matching</h3>
 						<ul>
 							<li style="margin: 25px;"> Parse the formula into a binary expression tree
 
@@ -1307,6 +1307,7 @@
 								{ src: '../reveal/plugin/notes/notes.js', async: true },
 								{ src: '../reveal/plugin/markdown/markdown.js' },
 								{ src: '../reveal/plugin/math/math.js', async: true },
+								{ src: '../reveal/plugin/zoom-js/zoom.js', async: true},
 								{ src: '../reveal/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
 							],
 							keyboard: {
