--- a/index.html
+++ b/index.html
@@ -7,18 +7,23 @@
 	</head>
 	<body>
 
+	<h1><a href="https://www.dropbox.com/s/f2a7iuohcl3zt1b/JCSS_talk_49_2019.pdf?dl=0">JCSS meeting at TNO-TU Delft</a></h1>
+	<h4><i>presented</i> 21 January 2019 </h4>
+	
+	<br>
+
         <!--<ul>
             <li> <a href="urbasis/index.html">Urbasis: kick-off</a> - 15 November 2018 </li>
             <li> <a href="oxford/index.html">Oxford slides</a> presented 22 October 2018</li>
         </ul>-->
 
         <h1><a href="digitwin/index.html">DigiTwin: RAs meeting</a></h1>
-		<h4>4 December 2018</h4>
+		<h4><i>presented</i> 4 December 2018</h4>
 
 		<br>
 
 		<h1><a href="urbasis/index.html">Urbasis: kick-off</a></h1>
-		<h4>15 November 2018</h4>
+		<h4><i>presented</i> 15 November 2018</h4>
 
 		<br>
 
