--- a/urbasis/index.html
+++ b/urbasis/index.html
@@ -512,7 +512,7 @@
                         
                     <h4>Liam Comerford</h4>
 
-					<h4>Presented by <a href="https://www.liverpool.ac.uk/engineering/staff/michael-beer/">Michael Beer</a>, <a href="https://www.liverpool.ac.uk/engineering/staff/edoardo-patelli/">Edoardo Patelli</a></h4>
+					<h4>Presented by <a href="https://www.liverpool.ac.uk/engineering/staff/edoardo-patelli/">Edoardo Patelli</a>, (on behalf of <a href="https://www.liverpool.ac.uk/engineering/staff/michael-beer/">Michael Beer</a>)</h4>
 
 					<!--<p style="font-size:20px"> <a href="https://marcodeangelis.github.io/"> https://marcodeangelis.github.io/ </a></p>-->
 					<p style="font-size:20px; position:absolute; left:0px; bottom:-75px"> <a href="https://urbasis-eu.osug.fr/"> https://urbasis-eu.osug.fr/ </a></p>
