--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
         
         <div style="width:55%; float:left">
+	<h3>Marco De Angelis</h3>
         <p>I am a postdoctoral research associate at the University of Liverpool (UoL) since May 2018. During my post I will be developing software for the efficient error and uncertainty propagation through computational codes. Previously, I was the manager of the doctoral training centre at the Institute for Risk and Uncertainty of the UoL for over two years. I hold a PhD in risk and uncertainty in engineering from UoL, an MSc <i>cum laude</i> in engineering for the mitigation of natural risks and a Bsc <i>cum laude</i> in structural engineering from the University of Rome, <i>Roma Tre</i>. </p>
         </div>
 	
