link to biblio in html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div style="background-color:#f2f2f2;width:25%; float:left">
         <h4>See my recent  <a href="talks.html">talks</a></h4>
         
-        <h4>See my list of <a href="https://drive.google.com/file/d/1SzPCXwtcnvVtlF4r8Ny67LRFW_Oh8ClY/view?usp=sharing">publications</a></h4>
+        <h4>See my list of <a href="biblio_flask_2019.html">publications</a></h4>
         </div>
             
         <br>
