dynamic navbar for mobile display

--- a/service.html
+++ b/service.html
@@ -23,16 +23,13 @@
 	
 		<div class="container" id="myNavbar"></div>
 
-
 		<div class="container">
+        <div class="row">
+        	<h2>Guest editor for IJAR</h2>
+        	<h2>Referee</h2>
+        	<h2>Co-chair of REC 2018</h2>
+		</div>
 
-		 <h3><a href="https://www.findaphd.com/phds/project/mrc-dimen-doctoral-training-partnership-integrated-system-for-rigorous-personalised-diagnosis-for-giant-cell-arteritis/?p104568">Fully-funded PhD opportunity</a></h3>
-			<p>Biostatistics and uncertainty, <a href="http://www.dimen.org.uk/">DiMeN</a></p>
-	        
-	    <!--<h3><a href="https://www.liverpool.ac.uk/risk-and-uncertainty-cdt/studentships/using-uncertainty-modelling-seismic-data-low-cost-sensor-nets/">Fully-funded PhD opportunity #1</a></h3>
-	        	<h3>Earthquake engineering and data science. <a href="https://urbasis-eu.osug.fr/">URBASIS</a></h3>-->
-
-		
 		<hr>
 
 		<footer style="display: block; width: 100%" id="myFooter"></footer>
@@ -49,9 +46,10 @@
 
 	<script type="text/javascript">
       $(document).ready(function () {
-            $('.oppo').addClass('active');
+            $('.service').addClass('active');
         });
     </script>
+
 
 	</body>
 </html>
