--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 
         <br>
         <div class="row">
-        	<h4>The best way to reach me is </h4>
+        	<h4>The best way to reach me is by email.</h4>
 		</div>
 
 		<hr>
