nav bar now fully transparent on scroll

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
 		  	  <li>Imprecise probability and statistics</li>  
 		  	  <li>Intrusive and non-intrusive forward uncertainty propagation</li> 
 		  	  <li>Monte Carlo and advanced sampling</li> 
+		  	  <li>Inferential statistics with imprecise data</li>
 			  <li>Reliability analysis</li> 
 			  <li>Rigorous computing with interval analysis</li> 
-			  <li>Machine learning for regression and approximation of computer codes</li> 
+			  <li>Machine learning for approximation of computer codes</li> 
 			  <li>Robust Bayes</li> 
 			  <li>Probability and confidence boxes</li> 
 			  <li>Credal networks</li> 
