--- a/service.html
+++ b/service.html
@@ -25,9 +25,26 @@
 
 		<div class="container">
         <div class="row">
-        	<h2>Guest editor for IJAR</h2>
+        	<h2>Guest Editor for IJAR</h2>
+        	<p>Special issue: <i>Computing with confidence</i> on the International Journal for Approximate Reasoning</p>
+        	<hr>
         	<h2>Referee</h2>
-        	<h2>Co-chair of REC 2018</h2>
+        	<ul>
+        		<li>Mechanical systems and signal processing, Elsevier</li>
+        		<li>Structural safety, Elsevier</li>
+        		<li>Journal of Risk and Uncertainty in Engineering Systems, part B: Mechanical engineering, ASME-ASCE</li>
+        	</ul>
+        	<hr>
+        	<h2>Scientific committee</h2>
+        	<ul>
+        		<li>Society for imprecise probability, ISIPTA</li>
+        		<li>Reliable engineering computing, REC</li>
+        	</ul>
+        	<hr>
+        	<h2>Co-chair of <a href="http://rec2018.uk">REC 2018</a></h2>
+        	<hr>
+        	<h2>Editor of the Risk Institute <a href="https://riskinstitute.uk/newsletters/">Newsletter</a></h2>
+        			until May 2017
 		</div>
 
 		<hr>
